micro att responsividade

--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ body{
     display: flex;
     /* flex: 1; */
     /* padding: 4vh 0 2vh 0; */
-    font-size: 5rem;
+    font-size: 4vw;
     background-color: rgba(255, 165, 0);
     width: 100vw;
     height: 28vh;
@@ -55,18 +55,18 @@ body{
     font-family: 'Advent Pro', sans-serif;
     font-weight: 600;
     color: whitesmoke;
-    text-indent: 2.4rem;
+    text-indent: 2.4vw;
 }
 
 .sobre {
     text-align: center;
-    font-size: 3.2rem;
+    font-size: 2.6vw;
     color: #000;
     margin: 8vh 0 4vh 0;
 }
 
 .like {
-    font-size: 3rem;
+    font-size: 2.2vw;
 }
 
 .curriculo {
@@ -75,7 +75,7 @@ body{
     display: block;
     text-align: center;
     transition: 0.4s;
-    font-size: 2.8rem;
+    font-size: 2.4vw;
     margin-top: 8vh;
 }
 
@@ -116,11 +116,15 @@ body{
 }
 
 .centernav .icon img {
-    height: 3.5rem;
-    width: 3.5rem;
+    height: 3.5vw;
+    width: 3.5vw;
     transition: 0.3s;
 }
 
 .centernav .icon img:hover {
     opacity: 70%;
 }
+
+/* @media (max-width: 900px){ */
+    
+/* } */
