--- a/index.css
+++ b/index.css
@@ -10,8 +10,6 @@ html{
 
 body{
     display: flex;
-    /* flex-direction: column; */
-    /* flex: 1; */
     align-items: center;
     justify-content: center;
     background: whitesmoke;
@@ -24,18 +22,10 @@ body{
     align-items: center;
     height: 100vh; 
     width: 100vw;
-    /* position: fixed; */
-    /* z-index: 1; */
-    /* top: 0; */
-    /* left: 0; */
-    /* overflow-x: hidden; */
-    /* padding-top: 20px; */
   }
 
 .nome {
     display: flex;
-    /* flex: 1; */
-    /* padding: 4vh 0 2vh 0; */
     font-size: 4vw;
     background-color: rgba(255, 165, 0);
     width: 100vw;
@@ -77,18 +67,17 @@ body{
     transition: 0.4s;
     font-size: 2.4vw;
     margin-top: 8vh;
+    text-shadow: 1px 2px 0 rgba(255, 165, 0);
 }
 
 .curriculo:hover {
     opacity: 38%;
+    text-shadow: 0 0 0 black;
   }
 
 .sobre {
 
 }
-
-.curso
-
 
 .centernav footer {
     display: flex;
@@ -124,7 +113,3 @@ body{
 .centernav .icon img:hover {
     opacity: 70%;
 }
-
-/* @media (max-width: 900px){ */
-    
-/* } */
