--- a/index.css
+++ b/index.css
@@ -67,6 +67,7 @@ body{
     transition: 0.4s;
     font-size: 2.4vw;
     margin-top: 8vh;
+    margin-bottom: 8vh;
     text-shadow: 1px 2px 0 rgba(255, 165, 0);
 }
 
